	
	* src/extensions/al_ext_vorbis.c: fix vorbis not flushing samples and
	bug in seek routine
	
	* CMakeLists.txt: work around CMake bug for visibility test and
	add testrotatesound to tests; add DMedia detection
	
	* src/backends/alc_backend.c, src/backends/alc_backend.h,
	src/backends/alc_backend_irix.c, configure.ac: make an independent
	"dmedia" back-end of IRIX native
	
2006-01-17  Sven Panne  <sven.panne@aedion.de>

	* src/alc/alc_context.c: Make sure that the speakers are moved to their
	initial position at context creation time. The whole logic of state
	initialization and update is currently a bit arcane and should be
	improved.

	* src/extensions/al_ext_mp3.c: Synched dlopen #ifdef with configure.ac.

2006-01-14  Prakash Punnoor <prakash@punnoor.de>

	* test/testda.c, test/testdoppler.c, test/testgain.c, test/testlib.c,
	test/testlib.h, test/testlistener.c, test/testlistener2.c,
	test/testlistener3.c, test/testlistener4.c, test/testloop.c,
	test/testmp32.c, test/testmulti.c, test/testmultinothread.c,
	test/testnothread.c, test/testpause.c, test/testpitch.c,
	test/testpitchnothread.c, test/testpitchnothread2.c,
	test/testqueue.c, test/testqueue2.c, test/testqueue3.c,
	test/testrelative.c, test/testreverb.c, test/testsingle.c,
	test/testsourcestop.c, test/testtime.c: use current alut wave loader
	instead of obsolete one, and as we use alut anyway, use its init/exit,
	as well
	
	* CMakeLists.txt: forgot testmulitnothread; add -fomit-frame-pointer
	only when doing optimization
	
2006-01-13  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/Makefile.am, src/arch/.cvsignore: added

	* configure.ac, src/Makefile.am: kludge for nasm vs. automake-1.8
	
	* README: cmake related corrections

2006-01-12  Prakash Punnoor <prakash@punnoor.de>

	* src/extensions/al_ext_vorbis.c, src/backends/alc_backend_alsa.c,
	src/backends/alc_backend_arts.c, src/backends/alc_backend_esd.c,
	src/backends/alc_backend_sdl.c: #if -> #ifdef
	
	* CMakeLists.txt: improve defines handling
	